--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
 theme: jekyll-theme-cayman
-title: Welcome to my home page
+title: Welcome to Paul's home page
 description: feel free to bookmark the page
